Theme Haze: Fix contrast

--- a/atoms/theme/branding/_haze.scss
+++ b/atoms/theme/branding/_haze.scss
@@ -3,12 +3,12 @@
   --primary-color--dark: #7D84B2;
   --primary-color--light: #D9DBF1;
 
-  --secondary-color: #e6ffb2;
-  --secondary-color--dark: #DBF4A7;
+  --secondary-color: #bace96;
+  --secondary-color--dark: #839269;
   --secondary-color--light: #F9F9ED ;
 
   --primary-color-text: #20165d;
-  --secondary-color-text: #CCCCCC;
+  --secondary-color-text: #FFFFFF;
 
   --contrast-color: #dd8d3a;
 
